<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        tools:src="@drawable/placeholder_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameCharactersTextView"
        style="@style/MyTextStyle.blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        tools:text="Rick Sanchez"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

    <TextView
        android:id="@+id/detailsTextView"
        style="@style/MyTextStyle.white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameCharactersTextView" />

    <TextView
        android:id="@+id/statusTextView"
        style="@style/MyTextStyle.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        tools:text="Aliver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsTextView" />

    <TextView
        android:id="@+id/speciesTextView"
        style="@style/MyTextStyle.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        tools:text="Aliver"
        app:layout_constraintStart_toEndOf="@id/statusTextView"
        app:layout_constraintTop_toTopOf="@id/statusTextView" />

    <TextView
        android:id="@+id/genderTextView"
        style="@style/MyTextStyle.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        tools:text="Aliver"
        app:layout_constraintStart_toEndOf="@id/speciesTextView"
        app:layout_constraintTop_toTopOf="@id/speciesTextView" />

    <TextView
        android:id="@+id/typeTextView"
        style="@style/MyTextStyle.grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        app:layout_constraintStart_toEndOf="@id/genderTextView"
        app:layout_constraintTop_toTopOf="@id/genderTextView"
        tools:text="Type" />

    <TextView
        android:id="@+id/locationsTitleTextView"
        style="@style/MyTextStyle.white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusTextView" />

    <TextView
        android:id="@+id/locationsTextView"
        style="@style/MyTextStyle.buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        tools:text="Earth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationsTitleTextView" />

    <TextView
        android:id="@+id/originTitleTextView"
        style="@style/MyTextStyle.white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/origin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationsTextView" />

    <TextView
        android:id="@+id/originTextView"
        style="@style/MyTextStyle.buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="5dp"
        tools:text="Earth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/originTitleTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>